Include dark mode in all the page

--- a/public/index.html
+++ b/public/index.html
@@ -25,11 +25,11 @@
       crossorigin="anonymous"
     />
   </head>
-  <body class="d-flex flex-column h-100">
+  <body class="d-flex flex-column h-100 bg-dark text-light">
     <noscript
       >Você precisa habilitar o Javascript para usar essa página.</noscript
     >
-    <div id="root" class="bg-dark text-light"></div>
+    <div id="root"></div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
