--- a/public/index.html
+++ b/public/index.html
@@ -53,6 +53,11 @@
     ></script>
 
     <script id="react-dotenv" src="./env.js"></script>
-    <script async src="https://analytics.leocarvalho.dev/tracker.js" data-ackee-server="https://analytics.leocarvalho.dev" data-ackee-domain-id="8cf0d117-2986-4322-8552-b001ee61b3d0"></script>
+    <script
+      async=""
+      src="https://analytics.leocarvalho.dev/tracker.js"
+      data-ackee-server="https://analytics.leocarvalho.dev"
+      data-ackee-domain-id="8cf0d117-2986-4322-8552-b001ee61b3d0"
+    ></script>
   </body>
 </html>
