--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
   <meta name="theme-color" content="#000000" />
   <meta name="description"
     content="Protestant Bot é um bot que retweeta um conteúdo, baseado em uma hashtag. Entre e saiba mais sobre." />
