Fix bug at Footer positioning

--- a/public/index.html
+++ b/public/index.html
@@ -22,9 +22,9 @@
   <title>Protestant Bot</title>
 </head>
 
-<body class="d-flex flex-column h-100 bg-dark text-light">
+<body class="h-100 bg-dark text-light">
   <noscript>Você precisa habilitar o Javascript para usar essa página.</noscript>
-  <div id="root"></div>
+  <div id="root" class="d-flex flex-column h-100"></div>
   <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
