--- a/public/index.html
+++ b/public/index.html
@@ -4,10 +4,9 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="theme-color" content="#000000" />
   <meta name="description"
     content="Protestant Bot é um bot que retweeta um conteúdo, baseado em uma hashtag. Entre e saiba mais sobre." />
-  <meta name="theme-color" content="#000000" />
+  <meta name="theme-color" content="#ffbe03" />
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
   <!--
