Move dark mode switcher from index.html to App.js Implement handler of dark mode on App.js

--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
   <title>Protestant Bot</title>
 </head>
 
-<body class="h-100 bg-dark text-light">
+<body class="h-100">
   <noscript>Você precisa habilitar o Javascript para usar essa página.</noscript>
   <div id="root" class="d-flex flex-column h-100"></div>
   <!--
