--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,7 @@
 
 <body class="h-100">
   <noscript>Você precisa habilitar o Javascript para usar essa página.</noscript>
-  <div id="root" class="d-flex flex-column h-100"></div>
+  <div id="root" class="h-100"></div>
   <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
